--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "1.2.6",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "jquery": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
